# zettelcognee

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  USER_STORIES.md  docker-compose.yml
.claude/hooks/: auto-commit.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  documents.py  search.py
backend/app/models/: connector.py  document.py  note.py  user.py
backend/app/parsers/: classifier.py  datapoints.py
backend/app/services/: knowledge.py  storage.py
backend/tests/: conftest.py  test_auth.py  test_classifier.py  test_datapoints.py  test_documents.py  test_health.py  test_search.py
mcp-server/: README.md  pyproject.toml
mcp-server/server/: main.py
ui/: Dockerfile  app.py  requirements.txt
