[project]
name = "zettelcognee"
version = "0.1.0"
description = "Corporate knowledge base powered by Cognee (GraphRAG)"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2",
    "pydantic-settings>=2",
    # Database
    "sqlalchemy[asyncio]>=2",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Cognee
    "cognee>=0.1",
    # Auth
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4",
    "python-multipart>=0.0.9",
    # Storage
    "google-cloud-storage>=2",
    # Background tasks
    "celery[redis]>=5",
    "redis>=5",
    # LLM providers
    "anthropic",
    # Embeddings (local)
    "fastembed>=0.4",
    # Utils
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
