[project]
name = "zettelcognee-mcp"
version = "0.1.0"
description = "MCP server — connect Claude to ZettelCognee knowledge base"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[project.scripts]
zettelcognee-mcp = "server.main:main"
